# Computer_DZ_2.0

./: .gitignore  README.md  ros_diagnose.sh  stop_items.txt
.history/dzactuator/param/: teb_local_planner_20260418040045.yaml  teb_local_planner_20260418040103.yaml  teb_local_planner_20260418041136.yaml  teb_local_planner_20260418041715.yaml  teb_local_planner_20260418041952.yaml  teb_local_planner_20260418042015.yaml  teb_local_planner_20260418042028.yaml  (+33 more)
.history/voice_test/: voice_test_20260418021724.py  voice_test_20260418225141.py
dzactuator/include/: dzactuator.h
dzactuator/launch/: amcl.launch  bringup.launch  dznavigation.launch  gmapping.launch  hr.launch  map_saver.launch  ysvv.launch
dzactuator/param/: costmap_common.yaml
dzsavepath/src/: savepath.cpp
lidar_process/: CMakeLists.txt
lidar_process/launch/: lidar_loc.launch
lidar_process/src/: lidar_filter_node.cpp  lidar_loc.cpp
resource/maps/: 20260315.pgm  20260315.yaml  Final_map.pgm  Final_map.yaml  map0405.pgm  map0405.yaml  map0416.pgm  map0416.yaml  yymap.pgm  yymap.yaml
resource/road_paths/: 1.txt  10.txt  12.txt  13.txt  14.txt  16.txt  17.txt  18.txt  2.txt  3.txt  5.txt  6.txt  7.txt  8.txt  9.txt
resource/stop_points/: 1.txt
rknn_pt/: CMakeLists.txt
rknn_pt/include/: common.h
rknn_pt/launch/: rknn_pt.launch
rknn_pt/src/: det_node.cc  red_target_node.cpp  target_node.cpp
src_git_backup/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config
src_git_backup/logs/: HEAD
teleop_wsad/: CMakeLists.txt  README.md
teleop_wsad/launch/: wsad_teleop.launch
(+251 files in other folders)
